--- a/mlbparks/pom.xml
+++ b/mlbparks/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+            <version>4.8.1</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
@@ -38,6 +44,10 @@
                         <failOnMissingWebXml>false</failOnMissingWebXml>
                         <warName>ROOT</warName>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.20</version>
                 </plugin>
             </plugins>
         </pluginManagement>
