--- a/parksmap-web/pom.xml
+++ b/parksmap-web/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <netflix.feign.version>9.3.1</netflix.feign.version>
         <springboot.version>1.4.0.RELEASE</springboot.version>
+        <version.surefire.plugin>2.19.1</version.surefire.plugin>
     </properties>
 
     <dependencies>
@@ -49,6 +50,11 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-core</artifactId>
             <version>${netflix.feign.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
         <!--
         <dependency>
@@ -108,6 +114,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${version.surefire.plugin}</version>
+            </plugin>
         </plugins>
     </build>
+
 </project>
