--- a/parksmap-web/pom.xml
+++ b/parksmap-web/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.openshift.evg.roadshow</groupId>
     <artifactId>parksmap-web</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -106,6 +106,17 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <distributionManagement>
+      <repository>
+        <id>nexus</id>
+        <url>http://nexus:8081/content/repositories/releases</url>
+      </repository>
+      <snapshotRepository>
+        <id>nexus</id>
+        <url>http://nexus:8081/content/repositories/snapshots</url>
+      </snapshotRepository>
+    </distributionManagement>
 
     <build>
         <finalName>${project.artifactId}</finalName>
